# NUClear

./: .clang-format  .clang-tidy  .cmake-format  .cmake-format.py  .gitignore  .licence.tmpl  .readthedocs.yaml  .travis.yml  CMakeLists.txt  LICENSE  NUClear.sublime-project  README.md  TODO List.md  appveyor.yml  main.cpp  make.sh  mkdocs.yml  pyproject.toml  set_license.sh  sonar-project.properties
doc/: CMakeLists.txt  Doxyfile.in  components.rst  conf.py  definitions.rst  dsl.rst  extension.rst  index.rst  index.rst~  managing_reactions.rst  networking.rst  overview.rst  quick_start.rst  startup.rst
docs/: .special.rst  CMakeLists.txt  Doxyfile  components.rst  conf.py  definitions.rst  dsl.rst  extension.rst  index.md  index.rst  managing_reactions.rst  networking.rst  overview.rst  quick_start.rst  requirements.txt  startup.rst
docs/_static/: colours.css
docs/contributing/: code-style.md  development.md  index.md
docs/explanation/: architecture.md  dsl-system.md  index.md  lifecycle.md  message-flow.md  nuclear-net.md  nuclearnet.md  scheduler.md  serialization.md  threading.md
docs/how-to/: custom-thread-pool.md  extending-dsl.md  index.md  io-events.md  logging.md  manage-reactions.md  networking.md  synchronization.md  tcp-udp.md  testing.md  tracing.md  watchdog-timeouts.md
docs/reference/: index.md
docs/spikes/: taskqueue-waitfree-assessment.md
docs/stylesheets/: extra.css
docs/tutorials/: first-reactor.md  index.md  installation.md  message-passing.md  periodic-tasks.md
src/: BaseMaster.cpp  CMakeLists.txt  CacheMaster.cpp  Configuration.hpp  Environment.cpp  Environment.hpp  LogLevel.cpp  LogLevel.hpp  PowerPlant.cpp  PowerPlant.hpp  PowerPlant.ipp  PriorityLevel.hpp  Reactor.cpp  Reactor.hpp  ReactorMaster.cpp  ThreadMaster.cpp  clock.cpp  clock.hpp  id.hpp  nuclear  nuclear.in
src/NUClear/: BaseMaster.cpp  CMakeLists.txt  CacheMaster.cpp  CacheMaster.ipp  ChronoMaster.cpp  ChronoMaster.ipp  Environment.cpp  NetworkMaster.cpp  NetworkMaster.ipp  PowerPlant.cpp  PowerPlant.ipp  Reactor.cpp  Reactor.ipp  ReactorController.cpp  ReactorController.ipp  ReactorMaster.cpp  ReactorMaster.ipp  ThreadMaster.cpp
src/NewDSL/: test.cpp
src/dsl/: Fusion.hpp  Parse.hpp
src/extension/: ChronoController.cpp  ChronoController.hpp  IOController.cpp  IOController.hpp  IOController_Common.ipp  IOController_Posix.cpp  IOController_Posix.hpp  IOController_Posix.ipp  IOController_Windows.cpp  IOController_Windows.hpp  IOController_Windows.ipp  IOController_Windows2.hpp  NetworkController.cpp  NetworkController.hpp  TraceController.cpp  TraceController.hpp  TraceEvent.cpp  TraceEvent.hpp
src/extensions/: Chrono.cpp  Networking.cpp
src/include/: nuclear
src/message/: CommandLineArguments.hpp  LogMessage.hpp  NetworkConfiguration.hpp  NetworkEvent.hpp  ReactionStatistics.cpp  ReactionStatistics.hpp  ServiceWatchdog.hpp  TimeTravel.hpp  Trace.hpp
src/nuclear_net/: CMakeLists.txt  Discovery.cpp  Discovery.hpp  FileDescriptor.hpp  Fragmentation.cpp  Fragmentation.hpp  NUClearNet.cpp  NUClearNet.hpp  PacketDeduplicator.hpp  RTTEstimator.cpp  Reliability.cpp  Reliability.hpp  Routing.cpp  Routing.hpp
src/nuclearnet/: CMakeLists.txt  Discovery.cpp  Discovery.hpp  FileDescriptor.hpp  Fragmentation.cpp  Fragmentation.hpp  Log.cpp  Log.hpp  NUClearNet.cpp  NUClearNet.hpp  PacketDeduplicator.cpp  RTTEstimator.cpp  RTTEstimator.hpp  Reliability.cpp  Reliability.hpp  Routing.cpp  Routing.hpp  wire_protocol.hpp
src/threading/: Reaction.cpp  Reaction.hpp  ReactionHandle.cpp  ReactionHandle.hpp  ReactionIdentifiers.hpp  ReactionTask.cpp  ReactionTask.hpp  TaskScheduler.cpp  TaskScheduler.hpp  ThreadPoolTask.cpp  ThreadPoolTask.hpp  ThreadWorker.cpp
src/util/: CallableInfo.hpp  CallbackGenerator.hpp  Dereferencer.hpp  FileDescriptor.cpp  FileDescriptor.hpp  FunctionFusion.hpp  GeneratedCallback.hpp  GroupDescriptor.cpp  GroupDescriptor.hpp  Inline.hpp  Logger.cpp  Logger.hpp  MergeTransient.hpp  MetaProgramming.hpp  Priority.hpp  RelevantArguments.hpp  Sequence.hpp  Sleeper.cpp  Sleeper.hpp  SleeperPosix.ipp  SleeperWindows.ipp  ThreadPoolDescriptor.cpp  ThreadPoolDescriptor.hpp  ThreadPriority.cpp  ThreadPriority.hpp  TransientDataElements.hpp  TypeList.hpp  TypeMap.hpp  apply.hpp  demangle.cpp  demangle.hpp  from_string.hpp  get_hostname.cpp  get_hostname.hpp  main_thread_id.cpp  main_thread_id.hpp  platform.cpp  platform.hpp  precise_sleep.cpp  precise_sleep.hpp  (+8 more)
tests/: CMakeLists.txt  api_always.cpp  api_basic.cpp  api_commandline.cpp  api_every.cpp  api_initialize.cpp  api_last.cpp  api_log.cpp  api_network.cpp  api_shutdown.cpp  api_startup.cpp  networktest.cpp  raw_test.cpp  test.cpp  tests.cpp
tests/api/: ReactionHandle.cpp  ReactionStatistics.cpp  ReactionStatisticsTiming.cpp  ReactorArgs.cpp
tests/dsl/: Always.cpp  ArgumentFission.cpp  BlockNoData.cpp  Buffer.cpp  CommandLineArguments.cpp  CustomGet.cpp  DSLOrdering.cpp  DSLProxy.cpp  Every.cpp  Every<Per>.cpp  Every_Per.cpp  FlagMessage.cpp  FusionInOrder.cpp  GroupPool.cpp  IO.cpp  Idle.cpp  IdleSync.cpp  Last.cpp  MainThread.cpp  MissingArguments.cpp  Once.cpp  Optional.cpp  Priority.cpp  Raw.cpp  RawFunction.cpp  Shutdown.cpp  Single.cpp  SingleSync.cpp  Startup.cpp  Sync.cpp  SyncOrder.cpp  TCP.cpp  Transient.cpp  TransientMultiTrigger.cpp  Trigger.cpp  UDP.cpp  UDPBroadcast.cpp  UDPMulticast.cpp  UDPMulticastKnownPort.cpp  UDPMulticastUnknownPort.cpp  (+2 more)
tests/individual/: BaseClock.cpp  CustomClock.cpp  TimeTravel.cpp  TimeTravelFrozen.cpp
tests/log/: Log.cpp
tests/network/: NUClearNetwork.cpp
tests/test_util/: TestBase.hpp  TimeUnit.hpp  common.hpp  diff_string.cpp  diff_string.hpp  executable_path.cpp  executable_path.hpp  has_ipv4_multicast.cpp  has_ipv4_multicast.hpp  has_ipv6.cpp  has_ipv6.hpp  has_multicast.cpp  has_multicast.hpp  lcs.hpp  queue_bdd_helpers.hpp  queue_live_tracker.hpp
tests/tests/: Benchmark.cpp  api_basic.cpp  api_every.cpp  api_every_basic.cpp  api_last.cpp  api_linked.cpp  api_linked_basic.cpp  api_network.cpp  api_network_basic.cpp  basic_nuclear_test.cpp  (+1 more)
(+778 files in other folders)
