[project]
name = "nuclear-docs"
version = "0.1.0"
description = "Documentation tooling for the NUClear C++ reactive framework"
requires-python = ">=3.11"

[dependency-groups]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
    "mkdoxy>=1.2",
]
dev = [
    "mdformat>=0.7.22",
    "mdformat-mkdocs>=4.4.2",
    "mdformat-tables>=1.0.0",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-footnote>=0.1.1",
    "mdformat-config>=0.2.1",
    "mdformat-beautysh>=1.0.0",
    "mdformat-simple-breaks>=0.0.1",
]

[tool.mdformat]
number = true
end_of_line = "lf"
exclude = [".venv", "site"]
